Name the interruption ahead of a refusal raised during shutdown
    A child podman shares the terminal's process group and dies of the same
    Ctrl-C as the launcher, so the main thread's refusal on its exit status
    reported the step as failed: "sandbox-jdk-use-proxy failed on the image's
    JDK", under a script whose own last line said it had succeeded. `fail`
    now prints one line first when the JVM's shutdown has begun, saying the
    launch was interrupted and the failure below is its consequence, and
    keeps the refusal verbatim under it. The JDK reports the state only by
    refusing, so the probe is `removeShutdownHook`, which throws once the
    hooks have started and needs no hook of its own to exist.

    The handover's comment claimed a non-zero exit during shutdown halts the
    JVM. Runtime.exit's contract is the opposite: a second invocation
    performs no action and blocks indefinitely, and the JVM ends when the
    hooks finish, with the shutdown's own status, so the cleanup hook
    completes and an interrupted run removes its own networks. The comment
    states that and points at the probe, which records the contract.

    The test stages the race in a JVM of its own, since a shutdown cannot be
    started in the test's: a hook, a thread that exits with 130, then `fail`
    on the main thread. The hook holds until it observes the main thread
    blocked in that exit, so the assertion on the order of the interruption
    line, the refusal and the hook's last line is observed rather than
    timed, and the exit status is the shutdown's.

    Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
    Claude-Session: https://claude.ai/code/session_01QEnHh1pTg3pNXcbpNo83A3